NCI-Agency/anet#1810: No longer use an overlay for advanced search
The overlay of the advanced search was having several problems:
- when the overlay was using the whole page it was no longer possible to
add extra filters
- the advanced select types of filters were not always well visible
- adding scrollbars was still not fixing the 2 problems above
- the advanced select filters were not having enough width to display
the data they needed
- on a small screen the advanced search was not usable

We also made the advanced select widget align just under the input
field, as it is now no longer important to also use the extra space
under the field label, that was especially important for the advanced
search which was not that wide.

--- a/client/src/components/advancedSelectWidget/AdvancedMultiSelect.css
+++ b/client/src/components/advancedSelectWidget/AdvancedMultiSelect.css
@@ -47,21 +47,16 @@
   vertical-align: middle;
 }
 
-.popover-content {
-  height:100%;
-  overflow: auto;
-}
 
 .bp3-popover.advancedSelectPopover {
   width: 100%;
   height:100%;
   overflow: auto;
 }
-
 .bp3-popover.advancedSelectPopover .bp3-popover-content {
   box-shadow: 0 6px 20px hsla(0, 0%, 0%, 0.4);
   padding: 15px;
 }
 .bp3-transition-container {
-  width: 120%;
+  width: 100%;
 }
